# cpi

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
src/cubiomespi/: __init__.py  constants.py  cubiomes.py
src/cubiomespi/lib/: Makefile  newlib.c
