[metadata]
name = cubiomespi-fork
version = 1.1.0
author = rakkateichou
author_email = cubiome@rkde.su
description = This library is a python interface for cubiomes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Languste27/cpi

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
cubiomespi = 
    lib/*.c
    lib/*.h
    lib/cubiomes/*.c
    lib/cubiomes/*.h